Name:                tnutils
Version:             0.1
Description:         Tom's utility functions
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Exposed-modules:     TNUtils
Build-depends:       base, bytestring, binary, old-time, directory, mtl, process