Name:                tnutils
Version:             0.1
Description:         Tom's utility functions
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple


Library 
   Exposed-modules:     TNUtils
   Build-depends:       base, bytestring, binary, old-time, directory, mtl, process

Executable tex2one
   Main-Is:             Tex2One.hs
   Build-depends:       base

Executable hsbibtex
   Main-Is:             hsbibtex.hs
   Build-depends:       base, bibtex, parsec